main.tf

resource "aws_security_group" "new_sg" {
  name        = "new_sg"
  description = "Allow HTTP and SSH and jenkins 8080"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "nginx_server" {
  ami                         = var.ami_id
  instance_type               = var.instance_type
  key_name                    = var.key_name
  subnet_id                   = var.subnet_id
  vpc_security_group_ids      = [aws_security_group.new_sg.id]
  associate_public_ip_address = true
  user_data                   = file("userdata_nginx.sh")

  tags = {
    Name = "Ubuntu-Nginx-Server"
  }
}

resource "aws_instance" "jenkins_server" {
  ami                         = var.ami_id
  instance_type               = var.instance_type
  key_name                    = var.key_name
  subnet_id                   = var.subnet_id
  vpc_security_group_ids      = [aws_security_group.new_sg.id]
  associate_public_ip_address = true
  user_data                   = file("userdata_jenkins.sh")

  tags = {
    Name = "Ubuntu-Jenkins-Server"
  }
}
